--- a/docs/package.json
+++ b/docs/package.json
@@ -9,13 +9,15 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "cva": "1.0.0-beta.4",
     "next": "15.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "lucide-react": "^0.544.0",
     "fumadocs-ui": "15.8.5",
     "fumadocs-core": "15.8.5",
-    "fumadocs-mdx": "12.0.3"
+    "fumadocs-mdx": "12.0.3",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "24.6.2",
