--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "slot-engine",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
+    "build": "turbo run build --filter=\"@slot-engine/*\"",
+    "dev": "turbo run dev --filter=\"@slot-engine/*\"",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
+    "dotenv": "17.2.3",
     "prettier": "^3.6.2",
     "turbo": "^2.5.8",
     "typescript": "5.9.3",
     "tsx": "^4.20.6",
-    "@types/node": "^24.7.2"
+    "@types/node": "^24.7.2",
+    "@changesets/changelog-github": "^0.5.1",
+    "@changesets/cli": "^2.29.7",
+    "@changesets/get-github-info": "0.6.0"
   },
   "packageManager": "pnpm@10.18.0",
   "engines": {
