--- a/packages/lgs/package.json
+++ b/packages/lgs/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "lgs",
+  "name": "@slot-engine/lgs",
   "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/slot-engine/slot-engine"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "typecheck": "tsc --noEmit"
   },
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "default": "./index.ts"
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts",
+      "module": "./dist/index.js",
+      "default": "./dist/index.js"
     }
   },
   "devDependencies": {
