--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,8 @@
         ".env*"
       ],
       "outputs": [
+        "dist/**",
+        "build/**",
         ".next/**",
         "!.next/cache/**"
       ]
