--- a/examples/lines_example/package.json
+++ b/examples/lines_example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lines_example",
+  "name": "example-lines",
   "version": "0.1.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
