--- a/.github/workflows/version-pr.yml
+++ b/.github/workflows/version-pr.yml
@@ -7,14 +7,14 @@ on:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
-permissions: {}
+permissions: 
+  contents: write # to create release (changesets/action)
+  issues: write # to post issue comments (changesets/action)
+  pull-requests: write # to create pull request (changesets/action)
 
 jobs:
-  release:
-    permissions:
-      contents: write # to create release (changesets/action)
-      issues: write # to post issue comments (changesets/action)
-      pull-requests: write # to create pull request (changesets/action)
+  version:
+    name: Version PR
 
     if: github.repository == 'slot-engine/slot-engine'
 
