--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc --noEmit",
     "prebuild": "pnpm typecheck && pnpm copy-files",
     "build": "tsup ./index.ts --dts --format cjs,esm --sourcemap",
+    "dev": "tsup ./index.ts --dts --format cjs,esm --sourcemap --watch",
     "copy-files": "tsx ../../scripts/copy-core-files.ts"
   },
   "files": [
