deps: adjust devDependencies

--- a/turbo.json
+++ b/turbo.json
@@ -22,6 +22,11 @@
         "^lint"
       ]
     },
+    "test": {
+      "dependsOn": [
+        "^test"
+      ]
+    },
     "typecheck": {
       "dependsOn": [
         "^typecheck"
