--- a/package.json
+++ b/package.json
@@ -6,20 +6,23 @@
     "dev": "turbo run dev --filter=\"@slot-engine/*\"",
     "docs:dev": "turbo run dev --filter=\"docs\"",
     "lint": "turbo run lint",
+    "test": "turbo run test",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "typecheck": "turbo run typecheck",
     "publish-release": "pnpm install --frozen-lockfile=false && pnpm --filter=\"@slot-engine/*\" build && pnpm changeset publish"
   },
   "devDependencies": {
-    "dotenv": "17.2.3",
-    "prettier": "^3.6.2",
-    "turbo": "^2.5.8",
-    "typescript": "5.9.3",
-    "tsx": "^4.20.6",
     "@types/node": "^24.7.2",
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.7",
-    "@changesets/get-github-info": "0.6.0"
+    "@changesets/get-github-info": "0.6.0",
+    "dotenv": "17.2.3",
+    "prettier": "^3.6.2",
+    "tsup": "8.5.0",
+    "tsx": "^4.20.6",
+    "turbo": "^2.5.8",
+    "typescript": "5.9.3",
+    "vitest":"4.0.8"
   },
   "packageManager": "pnpm@10.18.0",
   "engines": {
