chore: try to fix publishing

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,5 +30,9 @@
   },
   "dependencies": {
     "esbuild": "0.25.9"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   }
 }
