--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ permissions:
 jobs:
   release:
     name: Release
+    environment: Production
 
     if: github.repository == 'slot-engine/slot-engine'
 
