chore: run tests in CI

--- a/.github/actions/ci-checks/action.yml
+++ b/.github/actions/ci-checks/action.yml
@@ -10,3 +10,7 @@ runs:
     - name: Typecheck
       run: pnpm typecheck
       shell: bash
+
+    - name: Test
+      run: pnpm test
+      shell: bash
