--- a/docs/package.json
+++ b/docs/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "cva": "1.0.0-beta.4",
-    "next": "16.0.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "lucide-react": "^0.544.0",
-    "fumadocs-ui": "16.0.1",
-    "fumadocs-core": "16.0.1",
-    "fumadocs-mdx": "13.0.0",
-    "tailwind-merge": "^3.3.1"
+    "next": "16.0.6",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "lucide-react": "0.544.0",
+    "fumadocs-ui": "16.2.1",
+    "fumadocs-core": "16.2.1",
+    "fumadocs-mdx": "14.0.4",
+    "tailwind-merge": "3.4.0"
   },
   "devDependencies": {
     "@types/node": "24.9.1",
