--- a/packages/core/optimizer-rust/Cargo.toml
+++ b/packages/core/optimizer-rust/Cargo.toml
@@ -16,4 +16,15 @@ ndarray = "0.15.3"
 rand_distr = "0.4.2"
 rand_pcg = "0.2"
 
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
 
+[dev-dependencies]
+criterion = "0.5"
+
+[[bench]]
+name = "optimizer_bench"
+harness = false
