--- a/examples/lines_example/package.json
+++ b/examples/lines_example/package.json
@@ -6,6 +6,10 @@
     "build": "tsx ./index.ts"
   },
   "dependencies": {
-    "@slot-engine/core": "workspace:*"
+    "@slot-engine/core": "0.1.6"
+  },
+  "devDependencies": {
+    "@types/node": "^24.7.2",
+    "tsx": "^4.20.6"
   }
 }
