--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -31,13 +31,17 @@
     }
   },
   "dependencies": {
-    "@hono/node-server":"1.19.7",
-    "hono":"4.11.1",
+    "@hono/node-server": "1.19.7",
+    "@tanstack/react-query": "5.90.12",
+    "@tanstack/react-router": "1.141.2",
+    "hono": "4.11.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@fontsource-variable/archivo": "5.2.8",
+    "@tailwindcss/vite": "4.1.18",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -46,6 +50,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "tailwindcss": "4.1.18",
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
