--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -12,12 +12,13 @@
     "build-server": "tsup ./server/index.ts --dts --format cjs,esm --sourcemap",
     "build-client": "cd ./client && tsc -b && vite build",
     "build": "pnpm run build-server && pnpm run build-client",
-    "dev-server": "tsx watch ./server/index.ts",
+    "dev-server": "tsx watch ./index.ts",
     "dev-client": "cd ./client && vite",
     "dev": "concurrently \"pnpm run dev-server\" \"pnpm run dev-client\""
   },
   "files": [
-    "dist"
+    "dist",
+    "dist-client"
   ],
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -34,6 +35,7 @@
     "@hono/node-server": "1.19.7",
     "@tanstack/react-query": "5.90.12",
     "@tanstack/react-router": "1.141.2",
+    "chalk": "5.6.2",
     "hono": "4.11.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
@@ -41,6 +43,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@fontsource-variable/archivo": "5.2.8",
+    "@slot-engine/core": "0.1.9",
     "@tailwindcss/vite": "4.1.18",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
