--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -35,6 +35,7 @@
     "@hono/node-server": "1.19.7",
     "@tanstack/react-query": "5.90.12",
     "@tanstack/react-router": "1.141.2",
+    "@tanstack/router-plugin":"1.141.2",
     "chalk": "5.6.2",
     "hono": "4.11.1",
     "react": "^19.2.3",
@@ -50,9 +51,6 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "concurrently": "9.2.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
     "tailwindcss": "4.1.18",
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
