--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -33,13 +33,16 @@
   },
   "dependencies": {
     "@hono/node-server": "1.19.7",
+    "@tabler/icons-react": "3.36.0",
     "@tanstack/react-query": "5.90.12",
     "@tanstack/react-router": "1.141.2",
     "@tanstack/router-plugin":"1.141.2",
     "chalk": "5.6.2",
+    "cva": "1.0.0-beta.4",
     "hono": "4.11.1",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "tailwind-merge": "3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
