--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -32,22 +32,23 @@
     }
   },
   "dependencies": {
+    "@ark-ui/react": "5.30.0",
     "@hono/node-server": "1.19.7",
     "@tabler/icons-react": "3.36.0",
     "@tanstack/react-query": "5.90.12",
-    "@tanstack/react-router": "1.141.2",
-    "@tanstack/router-plugin":"1.141.2",
+    "@tanstack/react-router": "1.141.8",
+    "@tanstack/router-plugin": "1.141.8",
     "chalk": "5.6.2",
     "cva": "1.0.0-beta.4",
     "hono": "4.11.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "tailwind-merge": "3.4.0"
+    "tailwind-merge": "3.4.0",
+    "zod": "4.2.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
     "@fontsource-variable/archivo": "5.2.8",
-    "@slot-engine/core": "0.1.9",
+    "@slot-engine/core": "0.1.10",
     "@tailwindcss/vite": "4.1.18",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
@@ -57,7 +58,6 @@
     "tailwindcss": "4.1.18",
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
   }
 }
