feat!: require cli arg to run slot engine

--- a/examples/cluster_example/package.json
+++ b/examples/cluster_example/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "tsx ./run.ts"
+    "build": "tsx ./index.ts"
   },
   "dependencies": {
     "@slot-engine/core": "0.1.10"
