--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -32,7 +32,7 @@
     }
   },
   "dependencies": {
-    "@ark-ui/react": "5.30.0",
+    "@base-ui/react": "1.0.0",
     "@hono/node-server": "1.19.7",
     "@tabler/icons-react": "3.36.0",
     "@tanstack/react-query": "5.90.12",
