--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@base-ui/react": "1.0.0",
     "@hono/node-server": "1.19.7",
+    "@hono/zod-validator": "0.7.6",
     "@tabler/icons-react": "3.36.0",
     "@tanstack/react-query": "5.90.12",
     "@tanstack/react-router": "1.141.8",
