--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -35,7 +35,6 @@
     "@base-ui/react": "1.0.0",
     "@hono/node-server": "1.19.7",
     "@hono/zod-validator": "0.7.6",
-    "@tabler/icons-react": "3.36.0",
     "@tanstack/react-query": "5.90.12",
     "@tanstack/react-router": "1.141.8",
     "@tanstack/router-plugin": "1.141.8",
@@ -44,12 +43,15 @@
     "hono": "4.11.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "socket.io": "4.8.3",
+    "socket.io-client": "4.8.3",
     "tailwind-merge": "3.4.0",
     "zod": "4.2.1"
   },
   "devDependencies": {
     "@fontsource-variable/archivo": "5.2.8",
     "@slot-engine/core": "0.1.11",
+    "@tabler/icons-react": "3.36.0",
     "@tailwindcss/vite": "4.1.18",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
