--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,6 +29,7 @@
     }
   },
   "dependencies": {
+    "chalk": "5.6.2",
     "esbuild": "0.25.9",
     "socket.io-client": "4.8.3",
     "yargs": "18.0.0"
