--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,6 +26,9 @@
       "types": "./dist/index.d.ts",
       "module": "./dist/index.js",
       "default": "./dist/index.js"
+    },
+    "./types": {
+      "types": "./dist/index.d.ts"
     }
   },
   "dependencies": {
