--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -35,9 +35,11 @@
     "@base-ui/react": "1.0.0",
     "@hono/node-server": "1.19.7",
     "@hono/zod-validator": "0.7.6",
+    "@mantine/hooks": "8.3.10",
     "@tanstack/react-query": "5.90.12",
     "@tanstack/react-router": "1.141.8",
     "@tanstack/router-plugin": "1.141.8",
+    "@tanstack/react-virtual": "3.13.14",
     "chalk": "5.6.2",
     "cva": "1.0.0-beta.4",
     "hono": "4.11.1",
