--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -40,6 +40,7 @@
     "@tanstack/react-router": "1.141.8",
     "@tanstack/router-plugin": "1.141.8",
     "@tanstack/react-virtual": "3.13.14",
+    "@uiw/react-json-view":"2.0.0-alpha.40",
     "chalk": "5.6.2",
     "cva": "1.0.0-beta.4",
     "hono": "4.11.1",
