--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -44,6 +44,7 @@
     "chalk": "5.6.2",
     "cva": "1.0.0-beta.4",
     "hono": "4.11.1",
+    "qs": "6.14.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "socket.io": "4.8.3",
@@ -57,6 +58,7 @@
     "@tabler/icons-react": "3.36.0",
     "@tailwindcss/vite": "4.1.18",
     "@types/node": "^24.10.1",
+    "@types/qs":"6.14.0",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
