--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@slot-engine/core",
-  "version": "0.1.13",
+  "version": "0.1.14-test.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/slot-engine/slot-engine"
