--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,5 +1,11 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
+  "changelog": [
+    "./changelog.js",
+    {
+      "repo": "slot-engine/slot-engine"
+    }
+  ],
   "commit": false,
   "fixed": [],
   "linked": [],
