feat(panel): rename run function to start; fix tsconfig paths

--- a/packages/panel/client/tsconfig.app.json
+++ b/packages/panel/client/tsconfig.app.json
@@ -20,7 +20,10 @@
     "strict": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src"]
 }
