feat(panel): wip

--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -33,6 +33,9 @@
   },
   "dependencies": {
     "@base-ui/react": "1.0.0",
+    "@dnd-kit/abstract": "0.2.1",
+    "@dnd-kit/react": "0.2.1",
+    "@dnd-kit/helpers": "0.2.1",
     "@hono/node-server": "1.19.7",
     "@hono/zod-validator": "0.7.6",
     "@mantine/hooks": "8.3.10",
@@ -40,7 +43,7 @@
     "@tanstack/react-router": "1.141.8",
     "@tanstack/router-plugin": "1.141.8",
     "@tanstack/react-virtual": "3.13.14",
-    "@uiw/react-json-view":"2.0.0-alpha.40",
+    "@uiw/react-json-view": "2.0.0-alpha.40",
     "chalk": "5.6.2",
     "cva": "1.0.0-beta.4",
     "hono": "4.11.1",
@@ -60,7 +63,7 @@
     "@tabler/icons-react": "3.36.0",
     "@tailwindcss/vite": "4.1.18",
     "@types/node": "^24.10.1",
-    "@types/qs":"6.14.0",
+    "@types/qs": "6.14.0",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
