--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -44,6 +44,7 @@
     "@tanstack/router-plugin": "1.141.8",
     "@tanstack/react-virtual": "3.13.18",
     "@uiw/react-json-view": "2.0.0-alpha.40",
+    "@uiw/react-color":"2.9.2",
     "chalk": "5.6.2",
     "cva": "1.0.0-beta.4",
     "hono": "4.11.1",
