deps: use exact package versions; change pnpm install in ci

--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -18,5 +18,5 @@ runs:
       shell: bash
 
     - name: Install Dependencies
-      run: pnpm install
+      run: pnpm install --frozen-lockfile=false
       shell: bash
