--- a/examples/lines_example_OUTDATED/package.json
+++ b/examples/lines_example_OUTDATED/package.json
@@ -9,7 +9,7 @@
     "@slot-engine/core": "0.1.14"
   },
   "devDependencies": {
-    "@types/node": "^24.7.2",
-    "tsx": "^4.20.6"
+    "@types/node": "24.7.2",
+    "tsx": "4.20.6"
   }
 }
