--- a/packages/panel/package.json
+++ b/packages/panel/package.json
@@ -49,8 +49,8 @@
     "cva": "1.0.0-beta.4",
     "hono": "4.11.1",
     "qs": "6.14.1",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-is": "19.2.3",
     "recharts": "3.6.0",
     "socket.io": "4.8.3",
@@ -63,15 +63,15 @@
     "@slot-engine/core": "0.1.14",
     "@tabler/icons-react": "3.36.0",
     "@tailwindcss/vite": "4.1.18",
-    "@types/node": "^24.10.1",
+    "@types/node": "24.10.1",
     "@types/qs": "6.14.0",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
+    "@types/react": "19.2.5",
+    "@types/react-dom": "19.2.3",
+    "@vitejs/plugin-react": "5.1.1",
     "concurrently": "9.2.1",
     "tailwindcss": "4.1.18",
-    "globals": "^16.5.0",
+    "globals": "16.5.0",
     "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "vite": "7.2.4"
   }
 }
