--- a/examples/cluster_example/.panel-config.json
+++ b/examples/cluster_example/.panel-config.json
@@ -7,7 +7,8 @@
       "bonus": 20000
     },
     "maxPendingSims": 25,
-    "maxDiskBuffer": 150
+    "maxDiskBuffer": 150,
+    "makeUncompressedBooks": false
   },
   "betSimulations": [
     {
