--- a/examples/cluster_example/.panel-config.json
+++ b/examples/cluster_example/.panel-config.json
@@ -33,52 +33,6 @@
       ]
     }
   ],
-  "reelSets": [
-    {
-      "name": "reels_base.csv",
-      "path": "E:\\JONAS\\Sonstiges\\Development\\slot-engine\\examples\\cluster_example\\static-reels\\reels_base.csv",
-      "symbolColors": {
-        "S": "#ffffff",
-        "W": "#ef4444",
-        "H1": "#3b82f6",
-        "H2": "#edcd1a",
-        "H3": "#dbac2a",
-        "H4": "#a855f7",
-        "L1": "#f97316",
-        "L2": "#ec4899",
-        "L3": "#2fab50"
-      }
-    },
-    {
-      "name": "reels_bonus.csv",
-      "path": "E:\\JONAS\\Sonstiges\\Development\\slot-engine\\examples\\cluster_example\\static-reels\\reels_bonus.csv",
-      "symbolColors": {
-        "S": "#22c55e",
-        "W": "#ef4444",
-        "H1": "#3b82f6",
-        "H2": "#edcd1a",
-        "H3": "#dbac2a",
-        "H4": "#a855f7",
-        "L1": "#f97316",
-        "L2": "#ec4899",
-        "L3": "#06b6d4"
-      }
-    },
-    {
-      "name": "reels_maxwin.csv",
-      "path": "E:\\JONAS\\Sonstiges\\Development\\slot-engine\\examples\\cluster_example\\static-reels\\reels_maxwin.csv",
-      "symbolColors": {
-        "S": "#22c55e",
-        "W": "#ef4444",
-        "H1": "#3b82f6",
-        "H2": "#edcd1a",
-        "H3": "#dbac2a",
-        "H4": "#a855f7",
-        "L1": "#f97316",
-        "L2": "#ec4899",
-        "L3": "#06b6d4"
-      }
-    }
-  ],
+  "reelSets": [],
   "forceStop": false
 }
